--- a/package.json
+++ b/package.json
@@ -1,11 +1,33 @@
 {
-	"name": "eslint-plugin-vue-crooks-nits",
-        "version": "0.0.1",
-	"main": "index.js",
-	"devDependencies": {
-            "eslint": "~2.6.0"
-	},
-	"engines": {
-		"node": ">=0.10.0"
-	}
+  "name": "eslint-plugin-vue-crooks-nits",
+  "version": "0.0.1",
+  "main": "index.js",
+  "devDependencies": {
+    "eslint": "~2.6.0"
+  },
+  "engines": {
+    "node": ">=0.10.0"
+  },
+  "description": "Some custom ESLint rules to catch vue niggles such as empty vue options and empty style tags. Big props to the man AC.",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/idlethumbs/eslint-plugin-vue-crooks-nits.git"
+  },
+  "keywords": [
+    "eslint",
+    "vue",
+    "empty",
+    "options",
+    "style",
+    "plugin"
+  ],
+  "author": "Amon Jafarbay",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/idlethumbs/eslint-plugin-vue-crooks-nits/issues"
+  },
+  "homepage": "https://github.com/idlethumbs/eslint-plugin-vue-crooks-nits#readme"
 }
